@@ -11,6 +11,7 @@ Issue #2868 New-BcImage with 21.0 and TestToolkit installed won't work without s
 Issue #2867 Compile-AppInBCContainer not using Application ID on downloading symbols
 Issue #2865 NavSip.dll missing
 Issue #2864 Flush-ContainerHelperCache unexpectedly removes an image
+Issue #2760 Database connection string not used in New-BcContainerWizard on Azure VM
 
 4.0.10
 Issue #2842 Problems with 4.0.8 / 4.0.9 and Traefik
